fixed photo spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -201,6 +201,12 @@ form {
     gap: 5px; /* Adds a gap of 10px between grid items */
   }
 
+  .gallery-container img {
+      width:100%;
+      height:100%;
+  }
+
+
 
 
 /* Footer styling */
